crates/vespertide-query/src/sql/snapshots/vespertide_query__sql__add_column__tests__fill_with_enum_cast_case_expression_is_verbatim@fill_with_enum_cast_verbatim_mysql.snap
---
source: crates/vespertide-query/src/sql/add_column.rs
expression: sql
---
;
ALTER TABLE `subscription` ADD COLUMN `metric` ENUM('MONTHLY_QUOTA', 'SEAT');
UPDATE `subscription` SET `metric` = (CASE WHEN plan_key::text = 'API' THEN 'MONTHLY_QUOTA' ELSE 'SEAT' END)::billing_metric;
ALTER TABLE `subscription` MODIFY COLUMN `metric` ENUM('MONTHLY_QUOTA', 'SEAT') NOT NULL
