crates/vespertide-query/src/sql/snapshots/vespertide_query__sql__add_column__tests__fill_with_enum_cast_case_expression_is_verbatim@fill_with_enum_cast_verbatim_postgres.snap
---
source: crates/vespertide-query/src/sql/add_column.rs
expression: sql
---
CREATE TYPE "subscription_billing_metric" AS ENUM ('MONTHLY_QUOTA', 'SEAT');
ALTER TABLE "subscription" ADD COLUMN "metric" subscription_billing_metric;
UPDATE "subscription" SET "metric" = (CASE WHEN plan_key::text = 'API' THEN 'MONTHLY_QUOTA' ELSE 'SEAT' END)::billing_metric;
ALTER TABLE "subscription" ALTER COLUMN "metric" TYPE subscription_billing_metric, ALTER COLUMN "metric" SET NOT NULL
